assets/main.scss
---
---
@import "minima";

.post-content h2 {
  font-size: 1.25em;
  font-weight: 500;

  @media screen and (max-width: 800px) {
    font-size: 1.15em;
  }
}

.post-content img {
  display: block;
  margin: 1em auto;
  max-width: 80%;
  height: auto;
}

.post-content p {
  text-align: justify;
  hyphens: auto;
}

.u-email {
  font-size: 0.65em;
  word-break: break-all;
}

.footnotes {
  font-size: 0.8em;
  line-height: 1.35;

  ol {
    padding-left: 1.25em;
    margin-bottom: 0;
  }

  li {
    margin-bottom: 0.25em;
  }

  p {
    margin-bottom: 0;
  }

  a.reversefootnote {
    display: none;
  }
}

.site-footer {
  .footer-col-wrapper {
    display: flex;
    flex-wrap: wrap;
    gap: $spacing-unit;
    margin-left: 0;
  }
  .footer-col-left {
    flex: 1 1 0;
    min-width: 0;
    text-align: left;
  }
  .footer-col-right {
    flex: 1 1 0;
    min-width: 0;
    text-align: right;
  }
  .footer-copyright {
    margin-top: $spacing-unit / 2;
    font-size: $small-font-size;
    color: $grey-color;
  }
}

@media screen and (max-width: $on-palm) {
  .site-footer {
    .footer-col-left,
    .footer-col-right {
      width: 100%;
      flex: 1 1 100%;
    }
  }
}

